--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,15 @@
   "action": {
     "default_popup": "hello.html",
     "default_icon": "hello_extensions.png"
-  }
+  },
+  "background": {
+    "scripts": [
+        "script.js"
+    ]
+  },
+
+  "permissions": [
+    "activeTab",
+    "menus"
+  ]
 }
