Added content scripts to work w/ AllRecipes

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,22 @@
   "background": {
     "service_worker": "background.js"
   },
+  "icons":{
+    "16":"images/icon-16.png",
+    "32":"images/icon-32.png",
+    "64":"images/icon-64.png",
+    "128":"images/icon-128.png",
+    "622":"images/icon-622.png"
+  },
+  "content_scripts":[
+    {
+    "js": ["content.js"],
+    "css": ["content.css"],
+    "matches":[
+      "https://www.allrecipes.com/recipe/*"
+    ]
+    }
+  ],
   "permissions": [
     "activeTab",
     "contextMenus"
