--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Hello Extensions",
+  "name": "Recipe Tracker",
   "description": "Base Level Extension",
   "version": "1.0",
   "action": {
